Refactor: replace Collectors.toList() with Stream.toList() (SonarCloud java:S6204)